k8s/storefront-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: storefront
  namespace: freshcart

spec:
  type: ClusterIP
  selector:
    app: storefront
    
  ports:
    - port: 80
      targetPort: 8080
