k8s/ingress-gke.yaml
# Ingress for GKE

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: freshcart-gke-ingress
  namespace: freshcart

spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend: 
              service:
                name: checkout-api
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend: 
              service:
                name: storefront
                port:
                  number: 80
