k8s/ingress.yaml
# Ingress 
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: freshcart-ingress
  namespace: freshcart

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: checkout-api
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 8080
